datafeeder: GeoJSON sampleFeature end point
`GET
/upload/{jobId}/{typeName}/sampleFeature?[featureIndex=<index>&srs=<srs_code>&srs_reproject=<true|false>]`
end point to return the sample feature in GeoJSON format, optionally
specifying the feature index, the coord system identifier, and whether
to reproject from the native CRS to the one provided.

When `srs_reproject` is not `true`, the provided CRS overrides the
dataset's native CRS without reprojection.
